chore(deps): update

--- a/example/package.json
+++ b/example/package.json
@@ -33,40 +33,41 @@
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/uni-app-plus": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/uni-components": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/uni-h5": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3080220230428001",
+    "@dcloudio/uni-app": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-app-plus": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-components": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-h5": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-mp-lark": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-mp-qq": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3081220230802001",
     "ano-ui": "workspace:*",
-    "pinia": "^2.0.35",
-    "vue-demi": "^0.14.0",
+    "pinia": "^2.0.36",
+    "vue": "^3.2.47",
+    "vue-demi": "^0.14.5",
     "vue-i18n": "^9.2.2"
   },
   "devDependencies": {
-    "@dcloudio/uni-automator": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3080220230428001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3080220230428001",
-    "@iconify-json/tabler": "^1.1.74",
-    "@types/node": "^18.16.4",
+    "@dcloudio/uni-automator": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/uni-cli-shared": "3.0.0-alpha-3081220230802001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3081220230802001",
+    "@iconify-json/tabler": "^1.1.89",
+    "@types/node": "^18.17.11",
     "@uni-helper/uni-env": "^0.0.3",
     "@uni-helper/vite-plugin-uni-components": "^0.0.6",
     "@uni-helper/vite-plugin-uni-manifest": "^0.1.3",
-    "@uni-helper/vite-plugin-uni-pages": "^0.1.8",
-    "postcss": "^8.4.23",
-    "sass": "^1.62.1",
-    "terser": "^5.17.1",
-    "typescript": "^5.0.4",
-    "unocss": "^0.51.8",
-    "unocss-applet": "^0.4.10",
-    "unplugin-auto-import": "^0.15.3",
-    "vite": "^4.3.5"
+    "@uni-helper/vite-plugin-uni-pages": "^0.2.8",
+    "postcss": "^8.4.28",
+    "sass": "^1.66.1",
+    "terser": "^5.19.2",
+    "typescript": "^5.2.2",
+    "unocss": "^0.55.3",
+    "unocss-applet": "^0.5.5",
+    "unplugin-auto-import": "^0.16.6",
+    "vite": "^4.4.9"
   }
 }
