--- a/package.json
+++ b/package.json
@@ -20,28 +20,26 @@
     "docs:preview": "npm -C docs run serve",
     "build:all": "pnpm build && pnpm build:h5 && pnpm docs:build && esno scripts/uni.ts"
   },
-  "dependencies": {
-    "vue": "^3.2.47"
-  },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.38.5",
+    "@antfu/eslint-config": "^0.41.0",
+    "vue": "^3.3.4",
     "@dcloudio/types": "^3.3.3",
     "@types/fs-extra": "^11.0.1",
-    "@types/node": "18.16.4",
+    "@types/node": "18.17.11",
     "@uni-helper/vite-plugin-uni-components": "^0.0.6",
-    "@unocss/eslint-config": "^0.51.8",
+    "@unocss/eslint-config": "^0.55.3",
     "@vue/tsconfig": "^0.4.0",
-    "bumpp": "^9.1.0",
-    "eslint": "^8.39.0",
-    "esno": "^0.16.3",
+    "bumpp": "^9.2.0",
+    "eslint": "^8.47.0",
+    "esno": "^0.17.0",
     "fs-extra": "^11.1.1",
-    "rimraf": "^5.0.0",
-    "typescript": "^5.0.4",
-    "unbuild": "^1.2.1",
-    "unocss": "^0.51.8",
-    "vite": "^4.3.5",
-    "vitepress": "1.0.0-beta.1",
-    "vitest": "^0.31.0",
-    "vue-tsc": "^1.6.4"
+    "rimraf": "^5.0.1",
+    "typescript": "^5.2.2",
+    "unbuild": "^2.0.0",
+    "unocss": "^0.55.3",
+    "vite": "^4.4.9",
+    "vitepress": "1.0.0-rc.4",
+    "vitest": "^0.34.3",
+    "vue-tsc": "^1.8.8"
   }
 }
