--- a/packages/ano-ui/package.json
+++ b/packages/ano-ui/package.json
@@ -24,8 +24,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     },
     "./*": "./*"
   },
@@ -36,8 +36,8 @@
     "types": "./dist/index.d.ts"
   },
   "files": [
-    "dist",
-    "components"
+    "components",
+    "dist"
   ],
   "scripts": {
     "build": "unbuild",
