--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@ano-ui/monorepo",
+  "type": "module",
   "version": "0.8.1",
   "private": true,
+  "packageManager": "pnpm@8.9.0",
   "scripts": {
     "dev": "pnpm stub",
     "stub": "pnpm -r --filter=./packages/* --parallel run stub",
@@ -21,13 +23,12 @@
     "build:all": "pnpm build && pnpm build:h5 && pnpm docs:build && esno scripts/uni.ts"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.41.0",
-    "vue": "^3.3.4",
+    "@antfu/eslint-config": "1.0.0-beta.27",
     "@dcloudio/types": "^3.3.3",
     "@types/fs-extra": "^11.0.1",
     "@types/node": "18.17.11",
     "@uni-helper/vite-plugin-uni-components": "^0.0.6",
-    "@unocss/eslint-config": "^0.55.3",
+    "@unocss/eslint-config": "^0.56.5",
     "@vue/tsconfig": "^0.4.0",
     "bumpp": "^9.2.0",
     "eslint": "^8.47.0",
@@ -36,10 +37,11 @@
     "rimraf": "^5.0.1",
     "typescript": "^5.2.2",
     "unbuild": "^2.0.0",
-    "unocss": "^0.55.3",
+    "unocss": "^0.56.5",
     "vite": "^4.4.9",
     "vitepress": "1.0.0-rc.4",
     "vitest": "^0.34.3",
+    "vue": "^3.3.4",
     "vue-tsc": "^1.8.8"
   }
 }
