--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build:app": "npm -C example run build:app",
     "release": "bumpp package.json packages/*/package.json example/package.json",
     "typecheck": "vue-tsc --noEmit -p ./packages/ano-ui && vue-tsc --noEmit -p ./packages/preset && vue-tsc --noEmit -p ./example",
-    "lint": "eslint . --fix",
+    "lint": "eslint .",
+    "lint:fix": "nr lint --fix",
     "docs:dev": "npm -C docs run dev",
     "docs:build": "npm -C docs run build",
     "docs:preview": "npm -C docs run serve",
