--- a/example/package.json
+++ b/example/package.json
@@ -19,7 +19,7 @@
     "dev:quickapp-webview-union": "uni -p quickapp-webview-union",
     "build:app": "uni build -p app",
     "build:custom": "uni build -p",
-    "build:h5": "uni build",
+    "build:h5": "cross-env UNI_OUTPUT_DIR=../docs/.vitepress/dist/ui uni build",
     "build:h5:ssr": "uni build --ssr",
     "build:mp-alipay": "uni build -p mp-alipay",
     "build:mp-baidu": "uni build -p mp-baidu",
